--- a/05.rates-microservice/package.json
+++ b/05.rates-microservice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-gateway",
+  "name": "rates-microservice",
   "version": "1.0.0",
   "description": "SES HomeWork 05 - Microservices.",
   "scripts": {
@@ -19,9 +19,6 @@
   "dependencies": {
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-rate-limit": "^5.3.0",
-    "helmet": "^4.6.0",
-    "uuid": "^8.3.2"
+    "express": "^4.17.1"
   }
 }
