--- a/03.auth-microservice/package.json
+++ b/03.auth-microservice/package.json
@@ -19,8 +19,9 @@
   "dependencies": {
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^8.5.1",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "uuid": "^8.3.2"
   }
 }
