--- a/01.api-gateway/package.json
+++ b/01.api-gateway/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
     "helmet": "^4.6.0",
+    "joi": "^17.4.2",
     "uuid": "^8.3.2"
   }
 }
